--- a/index.html
+++ b/index.html
@@ -133,20 +133,19 @@
         </p>
       </section>
       <section class='copyright'>
-        Copyright (c) 2014 by <a href='http://jankus.me' target='_blank'>Jan Kus</a>
+        Copyright (c) 2014 by <a href='http://jankus.me' target='_blank'>Jack of all trades - Jan Kus</a>
       </section>
      
     </div>
     <script>
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-3621621-21']);
-      _gaq.push(['_trackPageview']);
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+      ga('create', 'UA-47787406-1', 'interactivedatinggame.com');
+      ga('send', 'pageview');
+
     </script>
   </body>
 </html>
