changed padding foo

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </p>
       </section>
       <section class='copyright'>
-        Copyright (c) 2014 by <a href='http://jankus.me' target='_blank'>Jack of all trades - Jan Kus</a>
+        Copyright (c) 2014 by <a href='http://jankus.me' target='_blank'>Jack of all trades</a>
       </section>
      
     </div>
