--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The Interactive Dating Game with Nadia Zaboura and Carl-o-Matic</title>
+    <title>The Interactive Dating Game with Nadia Zaboura and Vidar Andersen - brought to you by Jan Kus and Interactive Cologne</title>
     <meta charset='utf-8'>
     <script src='./javascripts/jquery-1.9.1.min.js'></script>
     <script src='./javascripts/application.js'></script>
@@ -64,6 +64,8 @@
         <p>
           <iframe width="380px" height="315" src="http://www.youtube.com/embed/wObJGrpk53s" frameborder="0" allowfullscreen></iframe>
           <iframe width="380px" height="315" src="http://www.youtube.com/embed/J2NkjOs_UMg" frameborder="0" allowfullscreen></iframe>
+          <iframe width="380" height="315" src="http://www.youtube.com/embed/tS_2sAGYI-Q" frameborder="0" allowfullscreen></iframe>
+          <iframe width="380" height="315" src="http://www.youtube.com/embed/snfx-F24gnQ" frameborder="0" allowfullscreen></iframe>
         </p>
       </section>      
       <section class='talks' id='talks'>
@@ -133,7 +135,8 @@
         </p>
       </section>
       <section class='copyright'>
-        Copyright (c) 2014 by <a href='http://jankus.me' target='_blank'>Jack of all trades</a>
+        Copyright (c) 2014 by <a href='http://jankus.me' target='_blank'>Jack of all trades</a><br />
+        Proudly brought to you by <a href='http://railslove.com' target='_blank'>Railslove</a> and <a href='http://interactive-cologne.com' target='_blank'>Interactive Cologne</a>
       </section>
      
     </div>
