updated some past candidates and the next round

--- a/index.html
+++ b/index.html
@@ -26,19 +26,22 @@
           <div class='center'>
             <ul class='nav'>
               <li>
+                <a href='#dates'>Dates</a>
+              </li>
+              <li>
+                <a href='#talks'>Your Hosts</a>
+              </li>
+              <li>
                 <a href='#about'>About</a>
               </li>
               <li>
                 <a href='#impressions'>Impressions</a>
               </li>
               <li>
-                <a href='#talks'>Your Hosts</a>
-              </li>
-              <li>
-                <a href='#dates'>Dates</a>
-              </li>
-              <li>
                 <a href='#prizes'>Prizes</a>
+              </li>
+              <li>
+                <a href='#host'>Become a host!</a>
               </li>
             </ul>
           </div>
@@ -49,26 +52,60 @@
       </div>
     </header>
     <div class='inhalt'>
-      <section class='about' id='about'>
-        <div class="dottedline"><h1>About</h1></div>
-        <p>
-          <b>Standard startup pitches are boring - PERIOD! but there's hope - the interactive dating Game! 30 years after Steve jobs courted bill Gates we present you the 2014 reboot - premiered & battle-tested during last year's tech festival <a href="http://interactive-cologne.com">“interactive cologne”</a>.</b>
-          We'll bring you back to this time. We are not searching for farmers or daughters-in-law - we present you the best and only CTO's, founders and VC's you need to meet! Three rounds full of fun, insights and great matches. Meet your CTO! Meet your Startup! Meet your VC!
-        </p>
-        <p>
-          <iframe width="100%" height="400" src="http://www.youtube.com/embed/5J3FUOCRXPo" frameborder="0" allowfullscreen></iframe>
-        </p>
+      <section class='dates' id='dates'>
+        <div class='dottedline'>
+            <h1>Dates</h1>
+        </div>
+        <div class='left'>
+            <div class='next-dates-box'>
+                <div class='next-dates'>
+                    <h2>Next Event</h2><p class='dotline'></p>
+                    <h3>March 10, 1 PM, German House</h3>
+                    <p>SXSX, German House, Lucille / 77 Rainey Street, Austin, TX</p>
+                    <p class='dotline'></p>
+                </div>
+            </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13784.865931480213!2d-97.73696348840147!3d30.259412486001114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b5abd5c44351%3A0x8a3cc2c15c63bf36!2sLucille+%2F+77+Rainey+Street+++Austin!5e0!3m2!1sen!2sde!4v1391512192554" width="100%" height="450" frameborder="0" style="border:0"></iframe>        
+          </div>
       </section>
-      <section class='impressions' id='impressions'>
-        <div class="dottedline"><h1>Impressions</h1></div>
-        <p>
-          <iframe width="380px" height="315" src="http://www.youtube.com/embed/wObJGrpk53s" frameborder="0" allowfullscreen></iframe>
-          <iframe width="380px" height="315" src="http://www.youtube.com/embed/J2NkjOs_UMg" frameborder="0" allowfullscreen></iframe>
-          <iframe width="380" height="315" src="http://www.youtube.com/embed/tS_2sAGYI-Q" frameborder="0" allowfullscreen></iframe>
-          <iframe width="380" height="315" src="http://www.youtube.com/embed/snfx-F24gnQ" frameborder="0" allowfullscreen></iframe>
-        </p>
-      </section>      
       <section class='talks' id='talks'>
+        <div class='dottedline'><h1>Candidates</h1></div>
+        <p>
+          <ul class='talks'>
+            <li>
+              <div class='name'>An awesome investor</div>
+              <div class='avatar' style="background-image: url('images/investor.gif')"></div>
+            </li>
+            <li>
+              <div class='name'>Startup</div>
+              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+            </li>
+            <li>
+              <div class='name'>Startup</div>
+              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+            </li>
+            <li>
+              <div class='name'>Startup</div>
+              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+            </li>
+            <li>
+              <div class='name'>An awesome investor</div>
+              <div class='avatar' style="background-image: url('images/investor.gif')"></div>
+            </li>
+            <li>
+              <div class='name'>Startup</div>
+              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+            </li>
+            <li>
+              <div class='name'>Startup</div>
+              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+            </li>
+            <li>
+              <div class='name'>Startup</div>
+              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+            </li>
+          </ul>
+        </p>        
         <div class='dottedline'><h1>Your Hosts</h1></div>
         <p>
           <ul class='talks'>
@@ -111,22 +148,153 @@
           </ul>
         </p>
       </section>
-      <section class='dates' id='dates'>
-        <div class='dottedline'>
-            <h1>Next Interactive Dating Game</h1>
-        </div>
-        <div class='left'>
-            <div class='next-dates-box'>
-                <div class='next-dates'>
-                    <h2>Next Event</h2><p class='dotline'></p>
-                    <h3>March 10, 1 PM, German House</h3>
-                    <p>SXSX, German House, Lucille / 77 Rainey Street, Austin, TX</p>
-                    <p class='dotline'></p>
-                </div>
-            </div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13784.865931480213!2d-97.73696348840147!3d30.259412486001114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b5abd5c44351%3A0x8a3cc2c15c63bf36!2sLucille+%2F+77+Rainey+Street+++Austin!5e0!3m2!1sen!2sde!4v1391512192554" width="100%" height="450" frameborder="0" style="border:0"></iframe>        
-          </div>
+
+      <section class='about' id='about'>
+        <div class="dottedline"><h1>About</h1></div>
+        <p>
+          <b>Standard startup pitches are boring - PERIOD! but there's hope - the interactive dating Game! 30 years after Steve jobs courted bill Gates we present you the 2014 reboot - premiered & battle-tested during last year's tech festival <a href="http://interactive-cologne.com">“interactive cologne”</a>.</b>
+          We'll bring you back to this time. We are not searching for farmers or daughters-in-law - we present you the best and only CTO's, founders and VC's you need to meet! Three rounds full of fun, insights and great matches. Meet your CTO! Meet your Startup! Meet your VC!
+        </p>
+        <p>
+          <iframe width="100%" height="400" src="http://www.youtube.com/embed/5J3FUOCRXPo" frameborder="0" allowfullscreen></iframe>
+        </p>
       </section>
+      <section class='impressions' id='impressions'>
+        <div class="dottedline"><h1>Impressions</h1></div>
+        <p>
+          <iframe width="380px" height="315" src="http://www.youtube.com/embed/wObJGrpk53s" frameborder="0" allowfullscreen></iframe>
+          <iframe width="380px" height="315" src="http://www.youtube.com/embed/J2NkjOs_UMg" frameborder="0" allowfullscreen></iframe>
+          <iframe width="380" height="315" src="http://www.youtube.com/embed/tS_2sAGYI-Q" frameborder="0" allowfullscreen></iframe>
+          <iframe width="380" height="315" src="http://www.youtube.com/embed/snfx-F24gnQ" frameborder="0" allowfullscreen></iframe>
+        </p>
+        <div class='dottedline'><h1>Past Candidates</h1></div>
+        <p>
+          <ul class='talks'>
+            <li>
+              <div class='name'>Capnamic Ventures</div>
+              <div class='avatar' style="background-image: url('images/joerg.jpg')"></div>
+              <div class='name'>Jörg Binnenbrücker</div>
+              <div class='handle'>
+                <a href='https://twitter.com/bibrue' target='_blank'>@bibrue</a>
+              </div>
+            </li>
+            <li>
+              <div class='name'>High-Tech Gründerfonds</div>
+              <div class='avatar' style="background-image: url('images/ole.jpg')"></div>
+              <div class='name'>Ole Kebbel</div>
+            </li>
+            <li>
+              <div class='name'>Catalyst Zero</div>
+              <div class='avatar' style="background-image: url('images/oliver.jpg')"></div>
+              <div class='name'>Oliver Thylmann</div>
+              <div class='handle'>
+                <a href='http://twitter.com/othylmann' target='_blank'>@othylmann</a>
+              </div>
+            </li>
+            <li>
+              <div class='name'>FanCaptain</div>
+              <div class='avatar' style="background-image: url('images/tobias.jpg')"></div>
+              <div class='name'>Tobias Schiwek</div>
+              <div class='handle'>
+                <a href='http://twitter.com/TobiasSchiwek' target='_blank'>@tobiasschiwek</a>
+              </div>
+            </li>
+            <li>
+              <div class='name'>9elements</div>
+              <div class='avatar' style="background-image: url('images/sebastian.jpg')"></div>
+              <div class='name'>Sebastian Deutsch</div>
+              <div class='handle'>
+                <a href='http://twitter.com/sipndip' target='_blank'>@sipndip</a>
+              </div>
+            </li>
+            <li>
+              <div class='name'>Qdega</div>
+              <div class='avatar' style="background-image: url('images/alex.jpg')"></div>
+              <div class='name'>Alexander Strieder</div>
+              <div class='handle'>
+                <a href='http://twitter.com/AlexStrieder‎' target='_blank'>@alexstrieder‎</a>
+              </div>
+            </li>
+            <li>
+              <div class='name'>FoodLoop</div>
+              <div class='avatar' style="background-image: url('images/christoph.jpg')"></div>
+              <div class='name'>Christoph Müller-Dechent</div>
+            </li>
+<!--             <li>
+              <div class='name'>_____</div>
+              <div class='avatar' style="background-image: url('images/....jpg')"></div>
+              <div class='name'>_____</div>
+              <div class='handle'>
+                <a href='http://twitter.com/....' target='_blank'>@....</a>
+              </div>
+            </li>
+            <li>
+              <div class='name'>_____</div>
+              <div class='avatar' style="background-image: url('images/....jpg')"></div>
+              <div class='name'>_____</div>
+              <div class='handle'>
+                <a href='http://twitter.com/....' target='_blank'>@....</a>
+              </div>
+            </li>
+            <li>
+              <div class='name'>_____</div>
+              <div class='avatar' style="background-image: url('images/....jpg')"></div>
+              <div class='name'>_____</div>
+              <div class='handle'>
+                <a href='http://twitter.com/....' target='_blank'>@....</a>
+              </div>
+            </li>
+            <li>
+              <div class='name'>_____</div>
+              <div class='avatar' style="background-image: url('images/....jpg')"></div>
+              <div class='name'>_____</div>
+              <div class='handle'>
+                <a href='http://twitter.com/....' target='_blank'>@....</a>
+              </div>
+            </li>
+            <li>
+              <div class='name'>_____</div>
+              <div class='avatar' style="background-image: url('images/....jpg')"></div>
+              <div class='name'>_____</div>
+              <div class='handle'>
+                <a href='http://twitter.com/....' target='_blank'>@....</a>
+              </div>
+            </li> -->
+          </ul>
+        </p>
+        <div class='dottedline'><h1>Past Hosts</h1></div>
+        <p>
+          <ul class='talks'>
+            <li>
+              <div class='name'>The irresistible</div>
+              <div class='avatar' style="background-image: url('images/carlo.jpg')"></div>
+              <div class='name'>Carl-o-Matic</div>
+              <div class='handle'>
+                <a href='https://twitter.com/carlo_matic' target='_blank'>@carlo_matic</a>
+              </div>
+              <div class='topic'>The wonderful</div>
+            </li>
+            <li>
+              <div class='name'>The wonderful</div>
+              <div class='avatar' style="background-image: url('images/nadia.jpg')"></div>
+              <div class='name'>Nadia Zaboura</div>
+              <div class='handle'>
+                <a href='https://twitter.com/nadia_z' target='_blank'>@nadia_z</a>
+              </div>
+              <div class='topic'>The empathic brain</div>
+            </li>
+<!--             <li>
+              <div class='name'>Jack of all trades</div>
+              <div class='avatar' style="background-image: url('images/....jpg')"></div>
+              <div class='name'>....</div>
+              <div class='handle'>
+                <a href='http://twitter.com/....' target='_blank'>@....</a>
+              </div>
+              <div class='topic'>Shieeeet</div>
+            </li>
+ -->          </ul>
+        </p>
+      </section>      
       <section class='prizes' id='prizes'>
         <div class='dottedline'><h1>Prizes</h1></div>
         <p>
@@ -134,9 +302,17 @@
           The winner of each round will win a "candle-light" dinner with the favored one in a romantic location in Cologne.
         </p>
       </section>
+      <section class='host' id='host'>
+        <div class='dottedline'><h1>Become a host and organize your own dating game</h1></div>
+        <p>
+          Get in touch with <a href='mailto:jan@railslove.com' target='_blank'>Jack of all trades</a>
+        </p>
+      </section>      
       <section class='copyright'>
-        Copyright (c) 2014 by <a href='http://jankus.me' target='_blank'>Jack of all trades</a><br />
-        Proudly brought to you by <a href='http://railslove.com' target='_blank'>Railslove</a> and <a href='http://interactive-cologne.com' target='_blank'>Interactive Cologne</a>
+        Proudly brought to you by <a href='http://railslove.com' target='_blank'>Railslove</a>, <a href='http://interactive-cologne.com' target='_blank'>Interactive Cologne</a><br/><br/>
+        Supported by <a href="http://supr.com/" target='_blank'>Supr.com</a>, <a href='http://fancaptain.com' target='_blank'>FanCaptain</a>, <a href='http://hmr-international.de/de/' target='_blank'>HMR International</a>, <a href='http://www.creative.nrw.de' target='_blank'>Creative.NRW</a> & <a href='http://www.wirtschaft.nrw.de/' target='_blank'>Ministerium für Wirtschaft, Energie, Industrie, Mittelstand und Handwerk
+des Landes Nordrhein-Westfalen</a><br /><br/>
+        Copyright (c) 2014 by <a href='http://jankus.me' target='_blank'>Jack of all trades</a><br /><br/>
       </section>
      
     </div>
