added responsive meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src='./javascripts/jquery-1.9.1.min.js'></script>
     <script src='./javascripts/application.js'></script>
     <link href='./stylesheets/application.css' rel='stylesheet'>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
   </head>
   <body>
     <header>
