added pics, added form, fcacebook, etc

--- a/index.html
+++ b/index.html
@@ -27,22 +27,16 @@
           <div class='center'>
             <ul class='nav'>
               <li>
-                <a href='#dates'>Dates</a>
-              </li>
-              <li>
-                <a href='#talks'>Your Hosts</a>
-              </li>
-              <li>
                 <a href='#about'>About</a>
               </li>
               <li>
+                <a href='#nextevent'>Next Event</a>
+              </li>
+              <li>
+                <a href='#background'>Background</a>
+              </li>
+              <li>
                 <a href='#impressions'>Impressions</a>
-              </li>
-              <li>
-                <a href='#prizes'>Prizes</a>
-              </li>
-              <li>
-                <a href='#host'>Become a host!</a>
               </li>
             </ul>
           </div>
@@ -53,15 +47,50 @@
       </div>
     </header>
     <div class='inhalt'>
-      <section class='dates' id='dates'>
+      <section class='about' id='about'>
+        <div class="dottedline"><h1>About</h1></div>
+        <p>
+          An event like German beer: easy to relax - easy to make new contacts - and the best method to get honest insights<br/>
+          Hand-picked startups meet high-class investors in the most candid way: Questions never asked before reveal insights never given before. Who’s the perfect match for you?<br/>
+          Join our event series that has already made dreams come true for so many founders and investors: Matchmaking with inspiring people in a creative and fun environment. An insane mixture of German efficiency and atypical German fun.
+        </p>
+      </section>      
+      <section class='nextevent' id='nextevent'>
         <div class='dottedline'>
-            <h1>Dates</h1>
+            <h1>Next Event</h1>
+        </div>
+        <div class="center">Get the honest insights @ SXSW 2014<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
+        <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
+
+          <script type="text/javascript">var submitted=false;</script>
+          <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
+          onload="if(submitted) {window.location='http://interactivedatinggame.com';}"></iframe>
+          <form action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe" 
+          onsubmit="submitted=true;">
+          <div class="ss-form-question errorbox-good">
+          <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label aria-hidden="true" class="ss-q-item-label" for="entry_1480900301"><div class="ss-q-title">email address
+          <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+          <span class="ss-required-asterisk">*</span></div>
+          <div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
+          <input type="text" name="entry.1480900301" value="" class="ss-q-short" id="entry_1480900301" dir="auto" aria-label="email address  " aria-required="true" required="" title="">
+          <div class="error-message"></div>
+          </div></div></div>
+          <input type="hidden" name="draftResponse" value="[,,&quot;-8748123357358389066&quot;]
+          ">
+          <input type="hidden" name="pageHistory" value="0">
+          <input type="hidden" name="fromEmail" value="false">
+
+          <input type="hidden" name="fbzx" value="-8748123357358389066">
+
+          <div class="ss-item ss-navigate">
+          <input type="submit" name="submit" value="Submit" id="ss-submit">
+          </div></ol></form>
         </div>
         <div class='left'>
             <div class='next-dates-box'>
                 <div class='next-dates'>
                     <h2>Next Event</h2><p class='dotline'></p>
-                    <h3>March 10, 1 PM, German House</h3>
+                    <h3>March 10, 1:10 PM, German House</h3>
                     <p>SXSX, German House, Lucille / 77 Rainey Street, Austin, TX</p>
                     <p class='dotline'></p>
                 </div>
@@ -89,7 +118,7 @@
               <div class='name'>Startup</div>
               <div class='avatar' style="background-image: url('images/startup.gif')"></div>
             </li>
-            <li>
+<!--             <li>
               <div class='name'>An awesome investor</div>
               <div class='avatar' style="background-image: url('images/investor.gif')"></div>
             </li>
@@ -104,9 +133,14 @@
             <li>
               <div class='name'>Startup</div>
               <div class='avatar' style="background-image: url('images/startup.gif')"></div>
-            </li>
+            </li> -->
           </ul>
-        </p>        
+        </p>
+        <div class='dottedline'><h1>Prizes</h1></div>
+        <p>
+          All participants will get the chance to present themselves in front of over 200 Techies, Founders, VC's! If you couldn't find your partner on the stage, you will find her or him in the crowd!<br/>
+          The winner of each round will win a "candle-light" dinner with the favored one in a romantic location in Cologne.
+        </p>                 
         <div class='dottedline'><h1>Your Hosts</h1></div>
         <p>
           <ul class='talks'>
@@ -147,11 +181,10 @@
               <div class='topic'>Doubble Shieeeet</div>
             </li>
           </ul>
-        </p>
+        </p>       
       </section>
-
-      <section class='about' id='about'>
-        <div class="dottedline"><h1>About</h1></div>
+      <section class='background' id='background'>
+        <div class="dottedline"><h1>Background</h1></div>
         <p>
           <b>Standard startup pitches are boring - PERIOD! but there's hope - the interactive dating Game! 30 years after Steve jobs courted bill Gates we present you the 2014 reboot - premiered & battle-tested during last year's tech festival <a href="http://interactive-cologne.com">“interactive cologne”</a>.</b>
           We'll bring you back to this time. We are not searching for farmers or daughters-in-law - we present you the best and only CTO's, founders and VC's you need to meet! Three rounds full of fun, insights and great matches. Meet your CTO! Meet your Startup! Meet your VC!
@@ -165,6 +198,14 @@
         <p>
           <iframe width="380" height="315" src="http://www.youtube.com/embed/tS_2sAGYI-Q" frameborder="0" allowfullscreen></iframe>
           <iframe width="380" height="315" src="http://www.youtube.com/embed/snfx-F24gnQ" frameborder="0" allowfullscreen></iframe>
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-7.jpg'>          
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-2.jpg'>
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-4.jpg'>
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-5.jpg'>
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-8.jpg'>
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-10.jpg'>          
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-11.jpg'>          
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-13.jpg'>                    
           <iframe width="380px" height="315" src="http://www.youtube.com/embed/wObJGrpk53s" frameborder="0" allowfullscreen></iframe>
           <iframe width="380px" height="315" src="http://www.youtube.com/embed/J2NkjOs_UMg" frameborder="0" allowfullscreen></iframe>
         </p>
@@ -296,20 +337,15 @@
  -->          </ul>
         </p>
       </section>      
-      <section class='prizes' id='prizes'>
-        <div class='dottedline'><h1>Prizes</h1></div>
-        <p>
-          All participants will get the chance to present themselves in front of over 200 Techies, Founders, VC's! If you couldn't find your partner on the stage, you will find her or him in the crowd!<br/>
-          The winner of each round will win a "candle-light" dinner with the favored one in a romantic location in Cologne.
-        </p>
-      </section>
-      <section class='host' id='host'>
+<!--       <section class='host' id='host'>
         <div class='dottedline'><h1>Become a host and organize your own dating game</h1></div>
         <p>
           Get in touch with <a href='mailto:jan@railslove.com' target='_blank'>Jack of all trades</a>
         </p>
-      </section>      
+      </section>  -->     
       <section class='copyright'>
+        <div class='dottedline'></div>
+        <a href='mailto:jan@interactive-cologne.com' target='_blank'>Questions?</a><br/><br/>
         Proudly brought to you by <a href='http://railslove.com' target='_blank'>Railslove</a>, <a href='http://interactive-cologne.com' target='_blank'>Interactive Cologne</a><br/><br/>
         Supported by <a href="http://supr.com/" target='_blank'>Supr.com</a>, <a href='http://fancaptain.com' target='_blank'>FanCaptain</a>, <a href='http://hmr-international.de/de/' target='_blank'>HMR International</a>, <a href='http://www.creative.nrw.de' target='_blank'>Creative.NRW</a> & <a href='http://www.wirtschaft.nrw.de/' target='_blank'>Ministerium für Wirtschaft, Energie, Industrie, Mittelstand und Handwerk
 des Landes Nordrhein-Westfalen</a><br /><br/>
