added call to action

--- a/index.html
+++ b/index.html
@@ -61,31 +61,30 @@
         </div>
         <div class="center">Get the honest insights @ SXSW 2014<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
+        <script type="text/javascript">var submitted=false;</script>
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
+        onload="if(submitted) {window.location='http://interactivedatinggame.com';}"></iframe>
+        <form action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe" 
+        onsubmit="submitted=true;">
+        <div class="ss-form-question errorbox-good">
+        <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label aria-hidden="true" class="ss-q-item-label" for="entry_1480900301"><div class="ss-q-title">email address
+        <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+        <span class="ss-required-asterisk">*</span></div>
+        <div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
+        <input type="text" name="entry.1480900301" value="" class="ss-q-short" id="entry_1480900301" dir="auto" aria-label="email address  " aria-required="true" required="" title="">
+        <div class="error-message"></div>
+        </div></div></div>
+        <input type="hidden" name="draftResponse" value="[,,&quot;-8748123357358389066&quot;]
+        ">
+        <input type="hidden" name="pageHistory" value="0">
+        <input type="hidden" name="fromEmail" value="false">
 
-          <script type="text/javascript">var submitted=false;</script>
-          <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
-          onload="if(submitted) {window.location='http://interactivedatinggame.com';}"></iframe>
-          <form action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe" 
-          onsubmit="submitted=true;">
-          <div class="ss-form-question errorbox-good">
-          <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label aria-hidden="true" class="ss-q-item-label" for="entry_1480900301"><div class="ss-q-title">email address
-          <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-          <span class="ss-required-asterisk">*</span></div>
-          <div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
-          <input type="text" name="entry.1480900301" value="" class="ss-q-short" id="entry_1480900301" dir="auto" aria-label="email address  " aria-required="true" required="" title="">
-          <div class="error-message"></div>
-          </div></div></div>
-          <input type="hidden" name="draftResponse" value="[,,&quot;-8748123357358389066&quot;]
-          ">
-          <input type="hidden" name="pageHistory" value="0">
-          <input type="hidden" name="fromEmail" value="false">
+        <input type="hidden" name="fbzx" value="-8748123357358389066">
 
-          <input type="hidden" name="fbzx" value="-8748123357358389066">
-
-          <div class="ss-item ss-navigate">
-          <input type="submit" name="submit" value="Submit" id="ss-submit">
-          </div></ol></form>
-        </div>
+        <div class="ss-item ss-navigate">
+        <input type="submit" name="submit" value="Submit" id="ss-submit">
+        </div></ol></form></div>
+        <div class='dottedline'></div>
         <div class='left'>
             <div class='next-dates-box'>
                 <div class='next-dates'>
@@ -181,7 +180,33 @@
               <div class='topic'>Doubble Shieeeet</div>
             </li>
           </ul>
-        </p>       
+        </p>   
+        <div class='dottedline'></div>
+        <div class="center">Get the honest insights @ SXSW 2014<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
+        <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
+        <script type="text/javascript">var submitted=false;</script>
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
+        onload="if(submitted) {window.location='http://interactivedatinggame.com';}"></iframe>
+        <form action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe" 
+        onsubmit="submitted=true;">
+        <div class="ss-form-question errorbox-good">
+        <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label aria-hidden="true" class="ss-q-item-label" for="entry_1480900301"><div class="ss-q-title">email address
+        <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+        <span class="ss-required-asterisk">*</span></div>
+        <div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
+        <input type="text" name="entry.1480900301" value="" class="ss-q-short" id="entry_1480900301" dir="auto" aria-label="email address  " aria-required="true" required="" title="">
+        <div class="error-message"></div>
+        </div></div></div>
+        <input type="hidden" name="draftResponse" value="[,,&quot;-8748123357358389066&quot;]
+        ">
+        <input type="hidden" name="pageHistory" value="0">
+        <input type="hidden" name="fromEmail" value="false">
+
+        <input type="hidden" name="fbzx" value="-8748123357358389066">
+
+        <div class="ss-item ss-navigate">
+        <input type="submit" name="submit" value="Submit" id="ss-submit">
+        </div></ol></form></div>
       </section>
       <section class='background' id='background'>
         <div class="dottedline"><h1>Background</h1></div>
@@ -209,6 +234,32 @@
           <iframe width="380px" height="315" src="http://www.youtube.com/embed/wObJGrpk53s" frameborder="0" allowfullscreen></iframe>
           <iframe width="380px" height="315" src="http://www.youtube.com/embed/J2NkjOs_UMg" frameborder="0" allowfullscreen></iframe>
         </p>
+        <div class='dottedline'></div>
+        <div class="center">Get the honest insights @ SXSW 2014<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
+        <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
+        <script type="text/javascript">var submitted=false;</script>
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
+        onload="if(submitted) {window.location='http://interactivedatinggame.com';}"></iframe>
+        <form action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe" 
+        onsubmit="submitted=true;">
+        <div class="ss-form-question errorbox-good">
+        <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label aria-hidden="true" class="ss-q-item-label" for="entry_1480900301"><div class="ss-q-title">email address
+        <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+        <span class="ss-required-asterisk">*</span></div>
+        <div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
+        <input type="text" name="entry.1480900301" value="" class="ss-q-short" id="entry_1480900301" dir="auto" aria-label="email address  " aria-required="true" required="" title="">
+        <div class="error-message"></div>
+        </div></div></div>
+        <input type="hidden" name="draftResponse" value="[,,&quot;-8748123357358389066&quot;]
+        ">
+        <input type="hidden" name="pageHistory" value="0">
+        <input type="hidden" name="fromEmail" value="false">
+
+        <input type="hidden" name="fbzx" value="-8748123357358389066">
+
+        <div class="ss-item ss-navigate">
+        <input type="submit" name="submit" value="Submit" id="ss-submit">
+        </div></ol></form></div>        
         <div class='dottedline'><h1>Past Candidates</h1></div>
         <p>
           <ul class='talks'>
